[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/GFX/Player/blueBall.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Components/InputComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Components/MovementComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/SFX/bounce.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/Hit.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 33.1685

[sub_resource type="CircleShape2D" id=2]
radius = 28.7181

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.66, 0.66 )
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )

[node name="InputComponent" parent="." instance=ExtResource( 3 )]

[node name="MovementComponent" parent="." instance=ExtResource( 4 )]

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Bounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -31.301

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
